on click new game button, reset board and start new game

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <header>
         <h1>Tic Tac Toe</h1>
         <p class="message"></p>
-        <a href="#" class="button">New game</a>
+        <a href="#" class="button" id="new-game">New game</a>
       </header>
     </div>
 
